fix to panels and jumbotron, text should be visible now

--- a/less/base/variables.less
+++ b/less/base/variables.less
@@ -14,29 +14,39 @@
 
 @table-bg-accent:                 lighten(@brand-secondary, 9.55%);
 
+@breadcrumb-padding-vertical:     @padding-large-horizontal;
+@breadcrumb-padding-horizontal:   0;
+@breadcrumb-bg:                   none;
+@breadcrumb-color:                @white;
+@breadcrumb-active-color:         @white;
+
 @btn-font-weight:                 normal;
 
-@btn-default-color:               lighten(@text-color, 10%);
+@btn-default-color:               darken(@text-color, 40%);
 @btn-default-border:              @btn-default-color;
+@btn-default-bg:                  @text-color;
 
 @btn-primary-color:               @brand-primary;
-@btn-primary-border:              @btn-primary-color;
+@btn-primary-border:              @brand-primary;
+@btn-primary-bg:                  @text-color;
 
 @btn-success-color:               @brand-success;
-@btn-success-border:              @btn-success-color;
+@btn-success-border:              @brand-success;
+@btn-success-bg:                  @text-color;
 
 @btn-info-color:                  @brand-info;
-@btn-info-border:                 @btn-info-color;
+@btn-info-border:                 @brand-info;
+@btn-info-bg:                     @text-color;
 
 @btn-warning-color:               @brand-warning;
-@btn-warning-border:              @btn-warning-color;
+@btn-warning-border:              @brand-warning;
+@btn-warning-bg:                  @text-color;
 
 @btn-danger-color:                @brand-danger;
-@btn-danger-border:               @btn-danger-color;
+@btn-danger-border:               @brand-danger;
+@btn-danger-bg:                   @text-color;
 
-@btn-link-disabled-color:         @gray-light;
-
-@zindex-modal:                    1050;
+@btn-link-disabled-color:         lighten(@brand-primary, 20%);
 
 @input-bg:                        rgba(0,0,0,18.2%);
 @input-bg-disabled:               rgba(0,0,0,29.1% );
@@ -50,22 +60,31 @@
 
 @input-height-base:               (@line-height-computed + (@padding-base-vertical * 4) + 2);
 
-@input-group-addon-bg:            rgba(255,255,255,19.1%);
-@input-group-addon-border-color:  @input-group-addon-bg;
+@input-group-addon-bg:                                  rgba(255,255,255,19.1%);
+@input-group-addon-border-color:                        @input-group-addon-bg;
 
-@navbar-border-radius:            0;
-@navbar-default-color:            @brand-secondary;
-@navbar-default-bg:               @brand-primary;
-@navbar-default-border:           @navbar-default-bg;
-@navbar-default-link-color:       @navbar-default-color;
-@navbar-default-link-hover-color: darken(@navbar-default-link-color, 19.1%);
+@jumbotron-bg:                                          darken(@body-bg, 20%);
 
-@navbar-default-toggle-hover-bg:         lighten(@navbar-default-bg, 19.1%);
-@navbar-default-toggle-icon-bar-bg:      @navbar-default-color;
+@navbar-border-radius:                                  0;
+@navbar-default-color:                                  @brand-secondary;
+@navbar-default-bg:                                     @brand-primary;
+@navbar-default-border:                                 @navbar-default-bg;
+@navbar-default-link-color:                             @navbar-default-color;
+@navbar-default-link-hover-color:                       darken(@navbar-default-link-color, 19.1%);
+@navbar-default-toggle-hover-bg:                        lighten(@navbar-default-bg, 19.1%);
+@navbar-default-toggle-icon-bar-bg:                     @navbar-default-color;
 
-@modal-content-bg:                             @body-bg;
-@modal-content-border-color:                   lighten(@body-bg, 19.1%);
-@modal-content-fallback-border-color:          lighten(@body-bg, 19.1%);
+@nav-tabs-border-color:                                 @body-bg;
+@nav-tabs-link-hover-border-color:                      lighten(@body-bg, 19.1%);
+@nav-tabs-active-link-hover-bg:                         lighten(@body-bg, 19.1%);
+@nav-tabs-active-link-hover-color:                      @white;
+@nav-tabs-active-link-hover-border-color:               lighten(@body-bg, 19.1%);
+@nav-tabs-justified-link-border-color:                  lighten(@body-bg, 19.1%);
+@nav-tabs-justified-active-link-border-color:           lighten(@body-bg, 19.1%);
+
+@modal-content-bg:                                      @body-bg;
+@modal-content-border-color:                            lighten(@body-bg, 19.1%);
+@modal-content-fallback-border-color:                   lighten(@body-bg, 19.1%);
 
 @modal-backdrop-bg:               #000;
 @modal-backdrop-opacity:          .618;
@@ -139,50 +158,33 @@
 @panel-primary-border:            @brand-primary;
 @panel-primary-heading-bg:        @brand-primary;
 @panel-primary-body-text:         @white;
-@panel-primary-body-bg:           lighten(@body-bg, 19.1%);
+@panel-primary-body-bg:           darken(@body-bg, 20%);
 
 @panel-success-text:              darken(@brand-success, 38.2%);
 @panel-success-border:            @state-success-border;
 @panel-success-heading-bg:        @state-success-bg;
 @panel-success-body-text:         @white;
-@panel-success-body-bg:           lighten(@body-bg, 19.1%);
+@panel-success-body-bg:           darken(@body-bg, 20%);
 
 @panel-info-text:                 darken(@brand-info, 38.2%);
 @panel-info-border:               @state-info-border;
 @panel-info-heading-bg:           @state-info-bg;
 @panel-info-body-text:            @white;
-@panel-info-body-bg:              lighten(@body-bg, 19.1%);
+@panel-info-body-bg:              darken(@body-bg, 20%);
 
 @panel-warning-text:              darken(@brand-warning, 38.2%);
 @panel-warning-border:            @state-warning-border;
 @panel-warning-heading-bg:        @state-warning-bg;
 @panel-warning-body-text:         @white;
-@panel-warning-body-bg:           lighten(@body-bg, 19.1%);
+@panel-warning-body-bg:           darken(@body-bg, 20%);
 
 @panel-danger-text:               darken(@brand-danger, 38.2%);
 @panel-danger-border:             @state-danger-border;
 @panel-danger-heading-bg:         @state-danger-bg;
 @panel-danger-body-text:          @white;
-@panel-danger-body-bg:            lighten(@body-bg, 19.1%);
+@panel-danger-body-bg:            darken(@body-bg, 20%);
 
 @well-bg:                         lighten(@body-bg, 19.1%);
 @well-border:                     @well-bg;
 
-@breadcrumb-padding-vertical:     @padding-large-horizontal;
-@breadcrumb-padding-horizontal:   0;
-@breadcrumb-bg:                   none;
-@breadcrumb-color:                @white;
-@breadcrumb-active-color:         @white;
-
-@nav-tabs-border-color:                     @body-bg;
-
-@nav-tabs-link-hover-border-color:          lighten(@body-bg, 19.1%);
-
-@nav-tabs-active-link-hover-bg:             lighten(@body-bg, 19.1%);
-@nav-tabs-active-link-hover-color:          @white;
-@nav-tabs-active-link-hover-border-color:   lighten(@body-bg, 19.1%);
-
-@nav-tabs-justified-link-border-color:            lighten(@body-bg, 19.1%);
-@nav-tabs-justified-active-link-border-color:     lighten(@body-bg, 19.1%);
-
-
+@zindex-modal:                    1050;
